--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>esto es una prueba</h1>
+<h1>esto es una prueba De Carlos</h1>
 
 </body>
 </html>
