--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -5,7 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>esto es una prueba De Carlos</h1>
+<h1>esto es una prueba De Carlos por que es un rico</h1>
+<h1>Hola soy catrlos</h1>
 
+<ul>
+	<li>
+		Hoka
+	</li>
+</ul>
 </body>
 </html>
